Added a form with basic validation

--- a/index.html
+++ b/index.html
@@ -1,31 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
     <title>Fork Me! FCC: Test Suite Template</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/style.css">
   </head>
 
   <body>
-     Hello World,we are software developers!
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
-    <main id="main">
-      <div id="title"> Man baby Tribute Page
-      <div id="img-div"> 
-        <img id="image" src=https://img.buzzfeed.com/buzzfeed-static/static/2019-08/7/20/enhanced/ee87d8bbe9ee/enhanced-557-1565208821-1.jpg alt="Man baby" max-width="100%"
-        >
-        <div id="img-caption"> 
-<p> This is a caption of manbaby. </p>
-          <div id="tribute-info">
-              <p> not empty </p>
-                  <a id="tribute-link" href="https://boilerplatesiteapp.herokuapp.com/" target="_blank" </a> Elliots Portfolio
-                </div>
-              </div> 
-            </div>
-          </div>
-        </div>
-   </main>
-    <script src="js/index.js"></script>
+      <h1 id="title"> My Survey </h1>
+
+          <p id="description"> </p>
+              
+              <form>
+  <fieldset>
+    <legend>Fruit juice size</legend>
+    <p>
+      <input type="input" name="name" id="name-lablel" value="name"placeholder="Enter your name here"/>
+      <label for="size_3">Number</label>
+    </p>
+    <p>
+      <input type="radio" name="size" id="size_1" value="small" />
+      <label for="size_1">Small</label>
+    </p>
+    <p>
+      <input type="radio" name="size" id="size_2" value="medium" />
+      <label for="size_2">Medium</label>
+    </p>
+    <p>
+      <input type="radio" name="size" id="size_3" value="large" />
+      <label for="size_3">Large</label>
+    </p>
+    <p>
+      <input type="email" name="email" id="email-label" value="large" placeholder="Enter your email here"/>
+      <label for="size_3">Email</label>
+    </p>
+    <p>
+      <input type="number" name="size" id="number-label" value="number" placeholder="  Enter your number here" />
+      <label for="size_3">Number</label>
+    </p>
+  </fieldset>
+</form>
+
+      
+
+    <h1> hello world we are software developers. </h1>
+    <script  src="js/index.js"></<script>
   </body>
 </html>
