added to the form

--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
       <label for="size_3">Number</label>
     </p>
     <p>
-      <input type="radio" name="size" id="size_1" value="small" />
+      <input type="radio" name="attribute" id="size_1" value="small" />
       <label for="size_1">Small</label>
     </p>
     <p>
-      <input type="radio" name="size" id="size_2" value="medium" />
+      <input type="radio" name="attribute" id="size_2" value="medium" />
       <label for="size_2">Medium</label>
     </p>
     <p>
-      <input type="radio" name="size" id="size_3" value="large" />
+      <input type="radio" name="attribute" id="size_3" value="large" />
       <label for="size_3">Large</label>
     </p>
     <p>
@@ -40,7 +40,15 @@
       <input type="number" name="size" id="number-label" value="number" placeholder="  Enter your number here" />
       <label for="size_3">Number</label>
     </p>
+    <label for="dropdown">Do you like ice?</label>
+    <select id="dropdown" name="dropdown" size="2" multiple>
+
+        <option value="yes">Yes</option>
+        <option value="no">No</option>
+
+    </select>
   </fieldset>
+  <textarea name="comment" form="usrform">Enter text here...</textarea>
 </form>
 
       
