--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
     </select>
   </fieldset>
   <textarea name="comment" form="usrform">Enter text here...</textarea>
+
+  <input #submit type="submit" value="Submit">
+
 </form>
 
       
